--- a/QuickCrossword/View/IndexLabel.xaml
+++ b/QuickCrossword/View/IndexLabel.xaml
@@ -1,13 +1,13 @@
-﻿<UserControl x:Class="QuickCrossword.View.Crossword"
+﻿<UserControl x:Class="QuickCrossword.View.IndexLabel"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:QuickCrossword.View"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <DataGrid x:Name="CrosswordDatagird"
-              >
-        <!--SelectionChanged="CrosswordDatagird_SelectionChanged"-->
-    </DataGrid>
+             d:DesignHeight="30" d:DesignWidth="30">
+    <Grid>
+        <Label Content="3"
+               Foreground="HotPink"></Label>
+    </Grid>
 </UserControl>
