Added TextChanged Event for Dynamically Generated Text boxes
I can changed the condition of the event to key down or focused to hightlight selected word chunk :) Hooray!

--- a/QuickCrossword/MainWindow.xaml
+++ b/QuickCrossword/MainWindow.xaml
@@ -61,7 +61,7 @@
 
             <Grid Grid.Column="0"
                   Margin="10">
-                <view:TestCrossword x:Name="CrosswordGrid"/>
+                <view:testGrid x:Name="CrosswordGrid"/>
             </Grid>
 
             <Grid Grid.Column="1"
