--- a/QuickCrossword/View/testGrid.xaml
+++ b/QuickCrossword/View/testGrid.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:QuickCrossword.View"
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="500">
-    <Grid>
+    <Grid x:Name="testGridGrid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
@@ -26,52 +26,5 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-
-        <TextBox Grid.Column="0"
-                 Grid.Row="0"
-                 Text="t"/>
-        <TextBox Grid.Column="1"
-                 Grid.Row="0"
-                 Text="t"/>
-        <TextBox Grid.Column="2"
-                 Grid.Row="0"
-                 Text="t"/>
-        <TextBox Grid.Column="3"
-                 Grid.Row="0"
-                 Text="t"/>
-        <TextBox Grid.Column="4"
-                 Grid.Row="0"
-                 Text="t"/>
-        <TextBox Grid.Column="5"
-                 Grid.Row="0"
-                 Text="t"/>
-        <TextBox Grid.Column="6"
-                 Grid.Row="0"
-                 Text="t"/>
-
-
-
-        <TextBox Grid.Column="0"
-                 Grid.Row="1"
-                 Text="t"/>
-        <TextBox Grid.Column="1"
-                 Grid.Row="1"
-                 Text="t"/>
-        <TextBox Grid.Column="2"
-                 Grid.Row="1"
-                 Text="t"/>
-        <TextBox Grid.Column="3"
-                 Grid.Row="1"
-                 Text="t"/>
-        <TextBox Grid.Column="4"
-                 Grid.Row="1"
-                 Text="t"/>
-        <TextBox Grid.Column="5"
-                 Grid.Row="1"
-                 Text="t"/>
-        <TextBox Grid.Column="6"
-                 Grid.Row="1"
-                 Text="t"/>
-
     </Grid>
 </UserControl>
