--- a/QuickCrossword/View/CrosswordBoard.xaml
+++ b/QuickCrossword/View/CrosswordBoard.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="QuickCrossword.View.FiveXFive"
+﻿<UserControl x:Class="QuickCrossword.View.CrosswordBoard"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:QuickCrossword.View"
              mc:Ignorable="d" 
-             d:DesignHeight="500" d:DesignWidth="500">
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid x:Name="CrosswordGrid"/>
 </UserControl>
